@@ -1,3 +1,7 @@
+2015-11-22  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* sample/Mandelbrot: Added.
+
 2015-11-21  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* sample/QJulia/qjulia_clu.rb: Added.
